<resources>
    <string name="app_name">Quem Votei</string>
    <string name="pede_idade">Olá! Conte-nos sua idade para personalizarmos sua experiência ;)</string>
    <string name="hint_idade">Anos completos</string>
    <string name="avancar_string">Avançar</string>
    <string name="cadastrar_string">Cadastrar</string>
    <string name="more_info_string">Só mais umas informaçõezinhas...</string>
    <string name="name_string">Nome</string>
    <string name="voting_city_string">Domicílio eleitoral</string>
    <string name="vote_status_profile_string">Deve votar na próxima eleição</string>
    <string name="city_placeholder">São Gabriel da Cachoeira</string>
    <string name="name_placeholder">Fulano da Silva</string>
    <string name="age_placeholder">0 anos</string>
    <string name="age_string">idade</string>
    <string name="city_string">cidade</string>
    <string name="avatar_string">avatar</string>
    <string name="disque_eleitor_string">Disque eleitor</string>
    22
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pergunta_de_teste">Pergunta de teste?</string>
    <string name="resposta_de_teste">resposta de teste</string>
    <string name="titulo_faq">Perguntas Frequentes</string>
    <string name="perfil_string">Perfil</string>
    <string name="eleicoes_string">Eleições</string>
    <string name="faq_string">FAQ</string>
    <string name="ano_zero_placeholder">0000</string>
    <string name="tipo_string">tipo</string>
</resources>
