<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragmentos.FAQFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_spacing">

        <TextView
            android:id="@+id/titulo_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/titulo_faq"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <TextView
            android:id="@+id/p1_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/pergunta_de_teste"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/r1_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resposta_de_teste"
            tools:layout_editor_absoluteX="100dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/p2_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/pergunta_de_teste"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/r2_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resposta_de_teste" />

        <TextView
            android:id="@+id/p3_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/pergunta_de_teste"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/r3_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resposta_de_teste" />

        <TextView
            android:id="@+id/p4_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/pergunta_de_teste"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/r4_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resposta_de_teste" />

        <TextView
            android:id="@+id/p5_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/double_spacing"
            android:text="@string/pergunta_de_teste"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/r5_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resposta_de_teste" />

    </LinearLayout>
</ScrollView>